he said that stream api is better