@@ -1,14 +1,8 @@
 package tasks;
 
 import common.Person;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -31,18 +25,17 @@ public class Task9 {
   public List<String> getNames(List<Person> persons) {
 
     /*
-      1. Вынес отдельно результат в переменную perNames (ну не могу я сразу отправлять вывод огромного стрима в ответ)
+      1. Ладно...
       2. Воспользуемся в stream skip(1) - что позволит нам избежать абсолютно бесполезную операцию удаления элемента из
       массива, да и вообще удалять что-то, кроме конфиденциальных данных плохо)
       3. Стрим нам и так вернёт пустой лист, так зачем это условие прописывать в начале (хотя честно просто ради
       душевного спокойствия можно было оставить)
      */
 
-    List<String> perNames = persons.stream()
-        .skip(1)
-        .map(Person::firstName)
-        .collect(Collectors.toList());
-    return perNames;
+    return persons.stream()
+                  .skip(1)
+                  .map(Person::firstName)
+                  .toList();
   }
 
   // Зачем-то нужны различные имена этих же персон (без учета фальшивой разумеется)
@@ -65,23 +58,14 @@ public class Task9 {
 
     /*
       1. Поменял косяк с Отечеством было secondName() -> стало middleName()
-      2. Немного поменял логику добавления пробелов, чтобы у нас не было лишних пробелов в итоговом ФИО
+      2. Заменил "бесполезные и плохо работающие ifы" на классный стрим, который сам чистит null и выдаёт склеенное ФИО
+
+      Ну я экспериментировал (я же хочу узнать, что вы от нас ждёте),
+      тотальное использование стримов это последнее, что я ожидал (хотя я научился пользоваться ими)
      */
-
-    String result = "";
-    if (person.secondName() != null) {
-      result += person.secondName() + " ";
-    }
-
-    if (person.firstName() != null) {
-      result += person.firstName() + " ";
-    }
-
-    if (person.middleName() != null) {
-      result += person.middleName();
-    }
-
-    return result;
+    return Stream.of(person.secondName(), person.firstName(), person.middleName())
+                 .filter(Objects::nonNull)
+                 .collect(Collectors.joining(" "));
   }
 
   // словарь id персоны -> ее имя
@@ -92,50 +76,35 @@ public class Task9 {
 
       (в целом функция итак нормальная была, да можно вроде, что-то со стримами сделать, но раз работает,
        то зачем трогать)
-     */
 
-    Map<Integer, String> map = new HashMap<>(persons.size());
-    for (Person person : persons) {
-      if (!map.containsKey(person.id())) {
-        map.put(person.id(), convertPersonToString(person));
-      }
-    }
-    return map;
+       ну так это не if на ifе, который на другом ifе
+       Ладно будут стримы...
+     */
+    return persons.stream()
+        .collect(Collectors.toMap(Person::id,
+                                  this::convertPersonToString,
+                                  (exitingValue, newValue) -> exitingValue));
   }
 
   // есть ли совпадающие в двух коллекциях персоны?
   public boolean hasSamePersons(Collection<Person> persons1, Collection<Person> persons2) {
 
     /*
-      алгоритмы спустя 6 часов...
-
-      1. просто добавил скорый выход, да можно где-то O(n + m) сделать, но я устал уже)
+        заменил неприятные вложенный for на "замечательный hashset и stream"
      */
-
-    boolean has = false;
-    for (Person person1 : persons1) {
-      for (Person person2 : persons2) {
-        if (person1.equals(person2)) {
-          has = true;
-          break;
-        }
-      }
-      if (has)
-        break;
-    }
-    return has;
+    Set<Person> personSet1 = new HashSet<>(persons1);
+    return persons2.stream().anyMatch(personSet1::contains);
   }
 
   // Посчитать число четных чисел
   public long countEven(Stream<Integer> numbers) {
 
     /*
-      1. поправил косяк с переменной класса (писал выше об этом)
+      1. поправил косяк с атрибутом класса (писал выше об этом) (удалил её вообще из этой функции)
       2. заменил foreach на count
      */
 
-    long count = numbers.filter(num -> num % 2 == 0).count();
-    return count;
+    return numbers.filter(num -> num % 2 == 0).count();
   }
 
   // Загадка - объясните почему assert тут всегда верен
@@ -146,9 +115,15 @@ public class Task9 {
       после того как я зашёл в онлайн компилятор стало всё понятно
 
       мы инициируем integers, как лист с числами от 1 до 10000 включительно (по возрастанию),
-      потом его перемешали и сделали из него сет, который оставил все числа от 1 до 10000 включительно и
-      дополнительно отсортировал их по возрастанию, получив две коллекции с одинаковым содержанием
-      потом их привели к общему типу и они соответственно стали равны
+      потом его перемешали и сделали из него сет, который оставил все числа от 1 до 10000 включительно,
+      получив две коллекции с одинаковым содержанием!!! (сейчас мы не считаем порядок)
+      а так как порядок обхода HashSet будет по возрастанию hashcode, и у Integer он будет совпадать со значением
+      так как это всего 10000 чисел, что не превысит порог, и эти числа натуральные и до 10000, что идеально для пула хешкодов,
+      поэтому они будут обходиться как от 1 до 10000 включительно, то есть порядок обхода integers и set будут одинаковыми
+      тогда при приведении в другой тип, они будут обходиться компилятором одинаково и иметь одинаковое содержание
+      значит assert увидит два одинаковых String и будет верен
+
+      на самом деле интересная тонкость, я что-то и не думал об этом
      */
 
     List<Integer> integers = IntStream.rangeClosed(1, 10000).boxed().collect(Collectors.toList());
